[gd_scene load_steps=8 format=3 uid="uid://b2yly75m1ae1c"]

[ext_resource type="Script" uid="uid://b4vbwmmip0a1d" path="res://Scripts/Player/UI/deathUI.gd" id="1_fhhdp"]
[ext_resource type="FontFile" uid="uid://c503fv36sdwt" path="res://Assets/UI/fonts/Ancient Modern Tales.woff" id="2_lg8mt"]
[ext_resource type="AudioStream" uid="uid://d3xh4dnj3dx8o" path="res://Assets/Sounds/music/8-bit-game-over-sound-effect-331435.mp3" id="3_gp2j3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fhhdp"]
bg_color = Color(0.403922, 0.00392157, 0, 0.301961)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gp2j3"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.400698, 0.400698, 0.400698, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_size = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lqq2p"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.143811, 0.000290966, 6.01634e-09, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_size = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k0rev"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_size = 4

[node name="DeathUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fhhdp")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_fhhdp")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -155.0
offset_top = -102.0
offset_right = 155.0
offset_bottom = 102.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Restart" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_lg8mt")
theme_override_font_sizes/font_size = 64
theme_override_styles/hover = SubResource("StyleBoxFlat_gp2j3")
theme_override_styles/pressed = SubResource("StyleBoxFlat_lqq2p")
theme_override_styles/normal = SubResource("StyleBoxFlat_k0rev")
text = "Restart"

[node name="Menu" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_lg8mt")
theme_override_font_sizes/font_size = 64
theme_override_styles/hover = SubResource("StyleBoxFlat_gp2j3")
theme_override_styles/pressed = SubResource("StyleBoxFlat_lqq2p")
theme_override_styles/normal = SubResource("StyleBoxFlat_k0rev")
text = "Main Menu"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -148.5
offset_top = -247.0
offset_right = 148.5
offset_bottom = -56.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_lg8mt")
theme_override_font_sizes/font_size = 86
text = "Game Over
"

[node name="DeathSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_gp2j3")

[connection signal="pressed" from="VBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="VBoxContainer/Menu" to="." method="_on_menu_pressed"]
